manifests/emqx-iot/auth/jwt-auth-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-jwt-auth-server
spec:
  selector:
    matchLabels:
      app: iot-jwt-auth-server
  replicas: 2
  template:
    metadata:
      labels:
        app: iot-jwt-auth-server
    spec:
      containers:
        - name: node
          image: ghcr.io/zazanicholas01/greenhouse-iot-jwt-auth-server:run-1 # {"$imagepolicy": "flux-system:greenhouse-iot-jwt-auth-server"}
          imagePullPolicy: IfNotPresent
          command: ["bun", "/app/index.js"]
          volumeMounts:
            - name: code
              mountPath: /app
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
      volumes:
        - name: code
          configMap:
            name: iot-jwt-auth-server-js
---
apiVersion: v1
kind: Service
metadata:
  name: iot-jwt-auth-service
spec:
  selector:
    app: iot-jwt-auth-server
  ports:
    - port: 80
      targetPort: 8080
